retrieveUnpackaged/objects/Material__c.object
<CustomObject>
    <fields>
        <fullName>DeletedAtClient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Material header / MARA-LVORM / Flag Material for Deletion at Client Level</description>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeletedAtSales__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Material sales data / MVKE-LVORM / Ind.: Flag material for deletion at distribution chain level</description>
        <label>Deleted at Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndOfServiceDate__c</fullName>
        <description>Material Header / ? /</description>
        <label>End of Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaterialDescLang__c</fullName>
        <description>Material text / MAKT-SPRAS /</description>
        <label>Material Description Language</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaterialDesc__c</fullName>
        <description>Material text / MAKT-MAKTX /</description>
        <label>Material Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialNumber__c</fullName>
        <description>Material Header / MARA-MATNR /</description>
        <externalId>true</externalId>
        <label>Material Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaterialStatus__c</fullName>
        <description>Material Header / MARA-MSTAE / Cross-Plant Material Status</description>
        <label>Material Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialType__c</fullName>
        <description>Material Header / MARA-MTART /</description>
        <label>Material Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelNo__c</fullName>
        <description>Material Header / MARA-BISMT / Old material number (Model)</description>
        <label>Model No (AB Material Number)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhaseOutDate__c</fullName>
        <description>Material Header / ? /</description>
        <label>Phase out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductHierarchy__c</fullName>
        <description>Material header / MARA-PRDHA /</description>
        <label>Product Hierarchy</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesMaterialStatus__c</fullName>
        <description>Material sales data / MVKE-VMSTA / Distribution-chain-specific material status</description>
        <label>Sales Material Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrg__c</fullName>
        <description>Material sales data / MVKE-VKORG /</description>
        <label>Sales Organization</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTextLang__c</fullName>
        <description>Material sales text / TDSPRAS /</description>
        <label>Sales Text Language</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesText__c</fullName>
        <description>Material sales text / TDLINE /</description>
        <label>Sales Text</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesUnit__c</fullName>
        <description>Material sales data / MVKE-VRKME /</description>
        <label>Sales Unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Material</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MaterialType__c</columns>
        <columns>MaterialStatus__c</columns>
        <columns>MaterialDesc__c</columns>
        <columns>SalesText__c</columns>
        <columns>SalesUnit__c</columns>
        <columns>MaterialNumber__c</columns>
        <columns>ModelNo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Model Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>